bin/testsuite/tests/compiler/src/errors/compiler5082.swg
#global testerror "Err0604"
#test
{
    @compilererror(0)
}
